# book-beginning_haskell

chapter2/: chapter2.cabal
chapter2/src/Chapter2/: DataTypes.hs  SimpleFunctions.hs
chapter3/: chapter3.cabal
chapter3/src/Chapter3/: Exercises.hs  MoreModules.hs
chapter4/: chapter4.cabal
chapter4/src/Chapter4/: Trees.hs
store/: store.cabal
store/src/: BinaryTree.hs  Client.hs
